--- a/config/zones/US-FLA-TEC.yaml
+++ b/config/zones/US-FLA-TEC.yaml
@@ -5,7 +5,7 @@ bounding_box:
     - 28.9295718550001
 capacity:
   battery storage:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
     - datetime: '2022-01-01'
@@ -21,11 +21,14 @@ capacity:
       source: EIA.gov
       value: 107.6
   biomass:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 69.1
   coal:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 2015.4
+    - datetime: '2020-01-01'
       source: EIA.gov
       value: 1124.4
     - datetime: '2021-12-01'
@@ -41,7 +44,16 @@ capacity:
       source: EIA.gov
       value: 486.0
   gas:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 4916.1
+    - datetime: '2018-09-01'
+      source: EIA.gov
+      value: 4786.0
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 4644.7
+    - datetime: '2020-01-01'
       source: EIA.gov
       value: 5535.7
     - datetime: '2021-12-01'
@@ -66,29 +78,56 @@ capacity:
       source: EIA.gov
       value: 6123.9
   geothermal:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   hydro storage:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   nuclear:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   oil:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 133.4
     - datetime: '2022-01-01'
       source: EIA.gov
       value: 0.0
   solar:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 10.3
+    - datetime: '2017-02-01'
+      source: EIA.gov
+      value: 29.3
+    - datetime: '2018-09-01'
+      source: EIA.gov
+      value: 174.0
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 344.5
+    - datetime: '2019-03-01'
+      source: EIA.gov
+      value: 399.9
+    - datetime: '2019-04-01'
+      source: EIA.gov
+      value: 449.9
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 452.7
+    - datetime: '2020-02-01'
+      source: EIA.gov
+      value: 527.2
+    - datetime: '2020-04-01'
+      source: EIA.gov
+      value: 602.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 661.6
@@ -117,14 +156,20 @@ capacity:
       source: EIA.gov
       value: 1356.4
   unknown:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 371.3
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 365.8
+    - datetime: '2019-12-01'
       source: EIA.gov
       value: 325.3
     - datetime: '2025-01-01'
       source: EIA.gov
       value: 317.8
   wind:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
 comment: Tampa Electric Company
@@ -243,12 +288,10 @@ emissionFactors:
         value: 277.252
     coal:
       - datetime: '2012-01-01'
-        source: IPCC 2014; Oberschelp, Christopher, et al. "Global emission hotspots
-          of coal power generation."
+        source: IPCC 2014; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
         value: 866.085401
       - datetime: '2021-01-01'
-        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots
-          of coal power generation."
+        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
         value: 969.2854010000001
     gas:
       - datetime: '2020-01-01'
