--- a/config/zones/US-NW-BPAT.yaml
+++ b/config/zones/US-NW-BPAT.yaml
@@ -5,6 +5,18 @@ bounding_box:
     - 49.50244
 capacity:
   battery storage:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 2.0
+    - datetime: '2017-07-01'
+      source: EIA.gov
+      value: 4.4
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 2.0
+    - datetime: '2020-12-01'
+      source: EIA.gov
+      value: 3.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1.0
@@ -15,6 +27,18 @@ capacity:
       source: EIA.gov
       value: 32.0
   biomass:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 350.9
+    - datetime: '2018-06-01'
+      source: EIA.gov
+      value: 340.9
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 339.3
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 325.9
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 308.2
@@ -37,10 +61,16 @@ capacity:
       source: EIA.gov
       value: 281.0
   coal:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 1459.8
+    - datetime: '2020-12-01'
       source: EIA.gov
       value: 729.9
   gas:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 2266.6
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 2271.7
@@ -48,10 +78,22 @@ capacity:
       source: EIA.gov
       value: 2167.0
   geothermal:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 18.0
   hydro:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 19303.3
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 19038.3
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 19178.5
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 19249.9
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 19010.3
@@ -65,19 +107,40 @@ capacity:
       source: EIA.gov
       value: 18988.6
   hydro storage:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 314.0
   nuclear:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 1200.0
   oil:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   solar:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 4.4
+    - datetime: '2017-11-01'
+      source: EIA.gov
+      value: 60.7
+    - datetime: '2019-12-01'
+      source: EIA.gov
+      value: 70.6
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 14.8
+    - datetime: '2020-03-01'
+      source: EIA.gov
+      value: 24.7
+    - datetime: '2020-06-01'
+      source: EIA.gov
+      value: 64.7
+    - datetime: '2020-07-01'
+      source: EIA.gov
+      value: 84.7
+    - datetime: '2020-10-01'
       source: EIA.gov
       value: 87.9
     - datetime: '2022-03-01'
@@ -90,10 +153,25 @@ capacity:
       source: EIA.gov
       value: 223.7
   unknown:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   wind:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 4380.7
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 3074.4
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 3077.5
+    - datetime: '2020-11-01'
+      source: EIA.gov
+      value: 3277.5
+    - datetime: '2020-12-01'
+      source: EIA.gov
+      value: 3397.5
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 3617.1
@@ -108,9 +186,8 @@ delays:
   consumptionForecast: 30
   production: 48
 disclaimer:
-  This zone includes all wind related electricity production from the generation-only
-  balancing authority Avangrid Renewables, LLC. Read more on the zone definition wiki
-  page.
+  This zone includes all wind related electricity production from the generation-only balancing authority Avangrid Renewables, LLC.
+  Read more on the zone definition wiki page.
 emissionFactors:
   direct:
     battery discharge:
